# CK

./: .gitignore  Complseg.CK_seg_completeness.html  Complseg.general_seg_completeness.html  ComplsegAB.CK_Cd_Nd_segAB_completeness.html  ComplsegP.CK_Idb_segP_completeness.html  Conservativity.CK_Cd_Idb_conserv_CK.html  Conservativity.CK_Cd_Nd_conserv_CK.html  Conservativity.CK_wCD_Nd_not_conserv_CK.html  GHC.logic.html  GHC.properties.html  Kripke.kripke_export.html  Makefile  README.md  Sequent.G4CK.CKOrder.html  Sequent.G4WK.WKDecisionProcedure.html  Sequent.G4WK.WKOrder.html  Sequent.G4WK.WKPropQuantifiers.html  Sequent.G4WK.WKSoundComplete.html  Soundness.CK_Cd_Ndb_soundness.html  Syntax.im_syntax.html  _CoqProject  install.sh  rocq-ck.opam  toc.html
Trash/: .Lindenbaum_disj_trick.aux  .Lindenbaum_lem_disj.aux  Lindenbaum_disj_trick.v  Lindenbaum_lem_disj.v
docs/: CNAME  Complseg.CK_Ndb_seg_completeness.html  Complseg.CK_seg_completeness.html  Complseg.WK_seg_completeness.html  Complseg.general_seg_completeness.html  ComplsegAB.CK_Cd_Nd_segAB_completeness.html  ComplsegAB.CK_Cd_Ndb_segAB_completeness.html  ComplsegAB.CK_Cd_segAB_completeness.html  ComplsegAB.general_segAB_completeness.html  ComplsegP.CK_Idb_Nd_segP_completeness.html  ComplsegP.CK_Idb_Ndb_segP_completeness.html  ComplsegP.CK_Idb_segP_completeness.html  ComplsegP.general_segP_completeness.html  Complth.CK_Cd_Idb_Ndb_th_completeness.html  Complth.CK_Cd_Idb_th_completeness.html  Complth.IK_th_completeness.html  Complth.general_th_completeness.html  Conservativity.CK_Cd_Idb_conserv_CK.html  GHC.CKH.html  (+53 more)
(+205 files in other folders)
